tests/language_modules/06_arrays/invalid_semantics/index_on_scalar.vf
module IndexOnScalar

procedure main()
is
    let amount: Integer = 1
    check amount[0] = 1
end main

end IndexOnScalar